package position;

option java_package = "skadistats.spectre.proto.basic";

message EntityPosition {
    optional int32  entity_idx = 1;
    optional sint32 pos_x      = 2;
    optional sint32 pos_y      = 3;
}
